# OriginalTransformer

./: .gitignore  README.md  pyproject.toml
scripts/: 0make_model_inference.py  1train_model.py
src/OriginalTransformer/: DataModule.py  Transformer.py  __init__.py
src/OriginalTransformer/functions/: attention.py  utils.py
src/OriginalTransformer/loss/: __init__.py  loss.py
src/OriginalTransformer/modules/: Batch.py  Decoder.py  DecoderLayer.py  Embeddings.py  Encoder.py  EncoderLayer.py  FeedForwardNetwork.py  LayerNorm.py  MultiHeadAttention.py  PositionalEncoding.py  SublayerUnit.py  __init__.py
